--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -29,5 +29,6 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-### VS Code ###
-.vscode/
+#######
+/.metadata
+/src/main/resources/static/
