--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/autotech_agil?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/autotech_agil?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=369415Vip*
 spring.jpa.hibernate.ddl-auto = update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
