--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/autotech_agil?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://db:3306/autotech_agil?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=369415Vip*
 spring.jpa.hibernate.ddl-auto = update
