--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://db:3306/autotech_agil?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=369415Vip*
 spring.jpa.hibernate.ddl-auto = update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
